--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,28 @@
+* {
+    padding: 0;
+    margin: 0;
+}
+
 body {
     text-align: center;
+}
+
+.score-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-bottom: -5%;
+}
+
+.score,
+.level,
+.lives {
+    font: 30px/1.5 'Varela Round', sans-serif;
+    padding: 10px;
+}
+
+.score-num,
+.level-num,
+.lives-num {
+    color: #cc0505;
 }
